<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:src="@drawable/nlogo"
        android:scaleType="fitStart"
         />
    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
        <ImageView
            android:layout_below="@+id/view6"
            android:layout_centerHorizontal="true"
            android:id="@+id/logo"
            app:srcCompat="@drawable/ic_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/view0"
            android:layout_below="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <EditText
            android:drawableStart="@drawable/ic_user"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/view0"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:id="@+id/username_et"
            android:padding="5dp"
            android:minHeight="40dp"
            android:background="@drawable/text_drawable"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <View
            android:id="@+id/view1"
            android:layout_below="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:drawableStart="@drawable/ic_lock_n"
            android:drawableLeft="@drawable/ic_lock_n"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:id="@+id/password_et"
            android:padding="5dp"
            android:layout_below="@+id/view1"
            android:minHeight="40dp"
            android:background="@drawable/text_drawable"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/forgot_password_tv"
            android:clickable="true"
            android:focusable="true"
            android:padding="9dp"
            android:layout_below="@+id/password_et"
            android:layout_alignEnd="@+id/password_et"
            android:layout_alignRight="@+id/password_et"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"/>

        <View
            android:layout_below="@+id/forgot_password_tv"
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/login_btn"
            android:layout_below="@+id/view2"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/button_round_corner"
            android:layout_width="300dp"
            android:minHeight="40dp"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"/>

        <!--<Button-->
            <!--android:minHeight="40dp"-->
            <!--android:layout_alignEnd="@+id/login_btn"-->
            <!--android:layout_alignRight="@+id/login_btn"-->
            <!--android:layout_below="@+id/login_btn"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:textColor="@color/white"-->
            <!--android:text="@string/skip"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:textAllCaps="false"-->
            <!--android:background="@drawable/button_round_corner"-->
            <!--android:layout_height="wrap_content" />-->

        <TextView
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:layout_alignEnd="@+id/login_btn"
            android:layout_alignRight="@+id/login_btn"
            android:layout_below="@+id/login_btn"
            android:textColor="@color/colorPrimary"
            android:text="@string/skip"
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"/>

        <Button
            android:layout_centerHorizontal="true"
            android:id="@+id/create_acct_btn"
            android:layout_above="@+id/or"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/create_acct"
            android:textColor="@color/white"
            android:background="@drawable/button_round_corner"
            android:layout_width="300dp"
            android:minHeight="40dp"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/or"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/google_sign_in"
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/ic_search"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="-70dp"
            android:background="@drawable/edit_text_drawable"
            android:minHeight="40dp"
            android:id="@+id/google_sign_in"
            android:paddingStart="60dp"
            android:paddingLeft="60dp"
            android:text="@string/google_signin"
            android:foreground="?android:attr/selectableItemBackground"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

</RelativeLayout>

